improve warnings when daemons are older than gpg
Closed, ResolvedPublic

Assigned To
Authored By
dkg
Apr 25 2017, 10:30 PM
Subscribers

Description

Over in https://bugs.debian.org/860745 , Enrico suggests improved wording for when the daemons are older than the current /usr/bin/gpg:

gpg: WARNING: server 'dirmngr' is older than us (2.1.17 < 2.1.18). Run with --verbose for details.
gpg: further info: Outdated servers may lack important security fixes.
gpg: further info: A restart can be forced using "gpgconf --kill all"

Event Timeline

dkg created this object in space S1 Public.
justus triaged this task as Wishlist priority.Jun 6 2017, 12:47 PM
justus added a project: gnupg (gpg22).
• werner claimed this task.
• werner added a subscriber: • werner.

Unless --quiet is used we now print

gpg: WARNING: server 'gpg-agent' is older than us (2.1.22-beta155 < 2.1.23-beta1)
gpg: Note: Outdated servers may lack important security fixes.
gpg: Note: Use the command "gpgconf --kill all" to restart them.

So no need for telling about --verbose.